Test dynamically removed processors, add IndustryTier class

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TEST</title>
+    <title>Industry Planner - Production Tool for Influence</title>
     <link rel="stylesheet" href="./styles/test.css">
 </head>
 <body>
@@ -19,7 +19,7 @@
     </div>
 
     <div id="industry-tiers">
-        <div class="industry-tier">
+        <div class="industry-tier" data-title="Static Processors">
             <div class="processor -refinery">
                 <div class="processor-header">
                     <div class="processor-name">Refinery</div>
