--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Industry Planner - Production Tool for Influence</title>
-    <link rel="stylesheet" href="./styles/test.css">
+    <link rel="stylesheet" href="./styles/test.scss">
+    <script type="module" src="./test.ts"></script>
 </head>
 <body>
 
@@ -207,7 +208,5 @@
             </div>
         </div>
     </div>
-
-    <script type="module" src="./test.js"></script>
 </body>
 </html>
