Start using SDK building properties for processors

--- a/src/index.html
+++ b/src/index.html
@@ -11,12 +11,12 @@
 
     <div id="test-add-building">
         <div>Add processor building:</div>
-        <div class="button" onclick="testAddBuildingById(2)">Extractor</div>
-        <div class="button" onclick="testAddBuildingById(3)">Refinery</div>
-        <div class="button" onclick="testAddBuildingById(5)">Factory</div>
-        <div class="button" onclick="testAddBuildingById(4)">Bioreactor</div>
-        <div class="button" onclick="testAddBuildingById(6)">Shipyard</div>
-        <div class="button" onclick="testAddBuildingById(0)">Empty Lot</div>
+        <div class="button -extractor" onclick="testAddBuildingById(2)">Extractor</div>
+        <div class="button -bioreactor" onclick="testAddBuildingById(4)">Bioreactor</div>
+        <div class="button -refinery" onclick="testAddBuildingById(3)">Refinery</div>
+        <div class="button -factory" onclick="testAddBuildingById(5)">Factory</div>
+        <div class="button -shipyard" onclick="testAddBuildingById(6)">Shipyard</div>
+        <div class="button -empty-lot" onclick="testAddBuildingById(0)">Empty Lot</div>
     </div>
 
     <div id="industry-tiers">
