Introduce overlays, test overlay for add processor

--- a/src/index.html
+++ b/src/index.html
@@ -5,19 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Industry Planner - Production Tool for Influence</title>
     <link rel="stylesheet" href="./styles/test.scss">
+    <link rel="stylesheet" href="./styles/overlay.scss">
     <script type="module" src="./test.ts"></script>
 </head>
 <body>
-
-    <div id="test-add-building">
-        <div class="button -extractor" onclick="testAddProcessorById(2)">Extractor</div>
-        <div class="button -bioreactor" onclick="testAddProcessorById(4)">Bioreactor</div>
-        <div class="button -refinery" onclick="testAddProcessorById(3)">Refinery</div>
-        <div class="button -factory" onclick="testAddProcessorById(5)">Factory</div>
-        <div class="button -shipyard" onclick="testAddProcessorById(6)">Shipyard</div>
-        <div class="button -empty-lot" onclick="testAddProcessorById(0)">Empty Lot</div>
-    </div>
-
     <div id="industry-plan"></div>
 </body>
 </html>
