--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Industry Planner - Production Tool for Influence</title>
-    <link rel="stylesheet" href="./styles/test.scss">
-    <link rel="stylesheet" href="./styles/overlay.scss">
+    <link rel="stylesheet" href="./styles/industry-plan.scss">
     <script type="module" src="./test.ts"></script>
 </head>
 <body>
