Generate JSON representation of industry plan

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,9 @@
     <script type="module" src="./test.ts"></script>
 </head>
 <body>
-    <div id="industry-plan"></div>
+    <div id="industry-plan">
+        <div id="industry-plan-header"></div>
+        <div id="industry-plan-main"></div>
+    </div>
 </body>
 </html>
