Add main-menu and support for multiple saved plans

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,20 @@
     <script type="module" src="./test.ts"></script>
 </head>
 <body>
+    <nav id="main-menu">
+        <div id="side-menu">
+            <div id="burger-icon">
+                <div class="icon-inner"></div>
+            </div>
+            <div id="page-title">Industry Planner</div>
+            <ul>
+                <li>Create industry plan</li>
+                <li>My industry plans</li>
+                <li>Public industry plans</li>
+            </ul>
+        </div>
+        <div id="account-menu"></div>
+    </nav>
     <div id="industry-plan">
         <div id="industry-plan-header"></div>
         <div id="industry-plan-main"></div>
