Create Industry Plan overlay: implementation

--- a/src/index.html
+++ b/src/index.html
@@ -15,9 +15,9 @@
             </div>
             <div id="page-title">Industry Planner</div>
             <ul>
-                <li>Create industry plan</li>
-                <li>My industry plans</li>
-                <li>Public industry plans</li>
+                <li onclick="industryPlanService.onClickCreateIndustryPlan()">Create Industry Plan</li>
+                <li>My Industry Plans</li>
+                <li>Public Industry Plans</li>
             </ul>
         </div>
         <div id="account-menu"></div>
