--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,8 @@
             <div id="page-title">Industry Planner</div>
             <ul>
                 <li onclick="industryPlanService.onClickCreateIndustryPlan()">Create Industry Plan</li>
-                <li>My Industry Plans</li>
-                <li>Public Industry Plans</li>
+                <li onclick="industryPlanService.onClickMyIndustryPlans()">My Industry Plans</li>
+                <li onclick="industryPlanService.onClickPublicIndustryPlans()">Public Industry Plans</li>
             </ul>
         </div>
         <div id="account-menu"></div>
