Implement plan-menu with options: Duplicate, Share, Remove

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
             <ul>
                 <li onclick="industryPlanService.onClickCreateIndustryPlan()">Create Industry Plan</li>
                 <li onclick="industryPlanService.onClickMyIndustryPlans()">My Industry Plans</li>
-                <li onclick="industryPlanService.onClickPublicIndustryPlans()">Public Industry Plans</li>
+                <li onclick="industryPlanService.onClickSharedIndustryPlans()">Shared Industry Plans</li>
             </ul>
         </div>
         <div id="account-menu"></div>
