--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Industry Planner - Production Tool for Influence</title>
     <link rel="stylesheet" href="./styles/industry-plan.scss">
-    <script src="./libraries/leader-line.min.js"></script>
+    <script src="/scripts/leader-line.min.js"></script>
     <script type="module" src="./test.ts"></script>
 </head>
 <body>
