Test signing messages and verifying signatures, migrate SCSS

--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
             </ul>
         </div>
         <div class="separator"></div>
+        <div onclick="starknetService.login()">Test Signature</div> <!-- TEST -->
         <div id="account-menu">
             <div id="starknet-connect" class="hidden" onclick="starknetService.starknetConnect()">Connect</div>
             <div id="starknet-wallet" class="hidden">
