Improve wallet logic, use dynamic chain ID

--- a/src/index.html
+++ b/src/index.html
@@ -23,10 +23,10 @@
             </ul>
         </div>
         <div class="separator"></div>
-        <div onclick="starknetService.login()">Test Signature</div> <!-- TEST -->
         <div id="account-menu">
             <div id="starknet-connect" class="hidden" onclick="starknetService.starknetConnect()">Connect</div>
             <div id="starknet-wallet" class="hidden">
+                <div class="test-signature" onclick="starknetService.login()">Test Signature</div> <!-- TEST -->
                 <img class="icon" alt="">
                 <div class="address"></div>
             </div>
