Generate auth token on login, verify the token for authed API requests

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,8 @@
         <div id="account-menu">
             <div id="starknet-connect" class="hidden" onclick="starknetService.starknetConnect()">Connect</div>
             <div id="starknet-wallet" class="hidden">
-                <div class="test-signature" onclick="starknetService.login()">Test Signature</div> <!-- TEST -->
+                <div class="connected-action api-auth-test" onclick="starknetService.apiAuthTest()">API Auth Test</div> <!-- TEST -->
+                <div class="connected-action login" onclick="starknetService.login()">Login</div> <!-- TEST -->
                 <img class="icon" alt="">
                 <div class="address"></div>
             </div>
